--- a/ropascV2.html
+++ b/ropascV2.html
@@ -1,6 +1,14 @@
 <html>
-
+    <head>
     <meta charset = UTF-8>
+    </head>
+
+    <body>
+        <button id='rock'>ROCK</button>
+        <button id='paper'>PAPER</button>
+        <button id='scissors'>SCISSORS</button>
+    </body>
+    
 
     <script>
 
