--- a/ropascV2.html
+++ b/ropascV2.html
@@ -4,9 +4,11 @@
     </head>
 
     <body>
-        <button id='rock'>ROCK</button>
-        <button id='paper'>PAPER</button>
-        <button id='scissors'>SCISSORS</button>
+        <button id="rock">ROCK</button>
+        <button id="paper">PAPER</button>
+        <button id="scissors">SCISSORS</button>
+        <br><br>
+        <div id="display"></div>
     </body>
     
 
@@ -29,15 +31,8 @@
 
         function fullRound(playerSelection, computerSelection){
 
-            let validMove = false;
 
-            while(validMove == false){
-                playerSelection = prompt('Please enter "rock", "paper", or "scissors".', '')
-                playerSelection = playerSelection.toLowerCase();
-                if (playerSelection == 'rock' || playerSelection == 'paper' || playerSelection == 'scissors'){
-                    validMove = true;
-                }
-            }
+
 
             computerSelection = computerPlay();
 
@@ -62,13 +57,17 @@
 
         function game(){
             let result;
-            // 5-round game loop removed for now
-            // for (let roundCount = 1; roundCount < 6; roundCount++){
-            //    console.log('Round ' + roundCount);
-                result = fullRound();
-                console.log(result);
-            //}
 
+            const moves = document.querySelectorAll('button');
+            moves.forEach((button) => {
+                button.addEventListener('click',() => {
+                    result = fullRound(button.id);
+                    alert(result);
+                });
+            });
+
+            
+            /* NOT NEEDED YET
             if (playerScore > computerScore){
                 alert(`FINAL SCORE: ${playerScore} win(s), ${computerScore} loss(es), ${tieScore} tie(s) \n
                 Congratulations! You won!`)
@@ -80,7 +79,7 @@
             else if (playerScore == computerScore){
                 alert(`FINAL SCORE: ${playerScore} win(s), ${computerScore} loss(es), ${tieScore} tie(s) \n
                 It's a draw!`)
-            }
+            } */
         }
 
     let playerScore = 0;
